Agregar proceso de compilación maven en el Dockerfile.native

--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -15,16 +15,19 @@
 #
 ###
 FROM quay.io/quarkus/ubi-quarkus-mandrel-builder-image:22.1-java11 AS build
-COPY . /usr/src/app
-WORKDIR /usr/src/app
-RUN ./mvnw clean package -Pnative -DskipTests
+WORKDIR /project
 
+# Copiar el código fuente y el archivo de configuración de Maven
+COPY src /project/src
+COPY pom.xml /project
+
+# Compilar la aplicación en un binario nativo
+RUN mvn package -Pnative -Dnative-image.docker-build=true
+
+# Usar una imagen base más ligera para ejecutar la aplicación nativa
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
 WORKDIR /work/
-RUN chown 1001 /work \
-    && chmod "g+rwX" /work \
-    && chown 1001:root /work
-COPY --from=build --chown=1001:root /usr/src/app/target/*-runner /work/application
+COPY --from=build /project/target/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
