--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.kubernetes.deployment-target=kubernetes
-quarkus.kubernetes.namespace=my-namespace-quarkus
+quarkus.kubernetes.namespace=default
 quarkus.kubernetes.name=my-app-quarkus
 quarkus.kubernetes.part-of=my-system
 quarkus.container-image.build=true
