--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ quarkus.kubernetes.namespace=default
 quarkus.kubernetes.name=my-app-quarkus
 quarkus.kubernetes.part-of=my-system
 quarkus.container-image.build=true
-quarkus.container-image.group=mygroupquarkus
-quarkus.container-image.name=$(Build.Repository.Name)
-quarkus.container-image.tag=$(Build.BuildId)
+quarkus.container-image.group=mygroupquarkus    
+quarkus.container-image.name=my-image-app-quarkus
+quarkus.container-image.tag=my-version-app-quarkus
