Cambio para probar generacion automatica de kubernetes.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ quarkus.kubernetes.namespace=default
 quarkus.kubernetes.name=my-app-quarkus
 quarkus.kubernetes.part-of=my-system
 quarkus.container-image.build=true
-quarkus.container-image.name=crindratrainingdev.azurecr.io/rahozindracompany/k8s-quarkus-quickstart
+quarkus.container-image.group=rahozindracompany
+quarkus.container-image.name=k8s-quarkus-quickstart
 quarkus.container-image.tag=my-version-app-quarkus
+quarkus.container-image.registry=crindratrainingdev.azurecr.io
