Prueba con propiedad quarkus.kubernetes.deploy=true

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.kubernetes.deploy=true
 quarkus.kubernetes.deployment-target=kubernetes
 quarkus.kubernetes.namespace=default
 quarkus.kubernetes.name=my-app-quarkus
