Agregan propiedades para exponer backend a través de LoadBalancer a internet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,15 @@ quarkus.kubernetes.deploy=true
 quarkus.kubernetes.deployment-target=kubernetes
 quarkus.kubernetes.namespace=default
 quarkus.kubernetes.name=my-app-quarkus
-quarkus.kubernetes.part-of=my-system
+quarkus.kubernetes.part-of=my-systemc
 quarkus.container-image.build=true
 quarkus.container-image.group=rahozindracompany
 quarkus.container-image.name=k8s-quarkus-quickstart
 quarkus.container-image.tag=my-version-app-quarkus
 quarkus.container-image.registry=crindratrainingdev.azurecr.io
+
+# Configurar la IP estática para el LoadBalancer (esto solo aplicará si no se sobrescribe)
+quarkus.kubernetes.service-type=LoadBalancer
+quarkus.kubernetes.annotations."service.beta.kubernetes.io/azure-load-balancer-resource-group"=RG-EUS-AKS-DEMO_aks-demo-cluster_eastus
+quarkus.kubernetes.annotations."service.beta.kubernetes.io/azure-pip-name": 8d28db9b-f302-434c-b2ff-b2b1438f3b16
+quarkus.kubernetes.annotations."service.beta.kubernetes.io/azure-dns-label-name": demoaksindra
