Habilitar despliegue en build nuevamente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.kubernetes.deploy=false
+quarkus.kubernetes.deploy=true
 quarkus.kubernetes.deployment-target=kubernetes
 quarkus.kubernetes.namespace=default
 quarkus.kubernetes.name=my-app-quarkus
